@@ -1,3 +1,8 @@
+TAG: annotload-6-0-3-1
+DATE: 03/23/2016
+STAFF: lec 
+CHANGES: removed comments regarding old max length values for note chunks
+
 TAG: annotload-6-0-2-1
 DATE: 12/09/2015
 STAFF: lec
